# solid-monitor

./: CMakeLists.txt  README.md
Src/: Core.cpp  Core.hpp  DLLoader.hpp  DLManager.cpp  DLManager.hpp  Data.cpp  Data.hpp  DataTypes.cpp  DataTypes.hpp  main.cpp  types.hpp
Src/Graphic/: IDisplayManager.hpp
Src/Graphic/Qt/: AddWidget.cpp  AddWidget.hpp  CMakeLists.txt  DisplayManager.cpp  DisplayManager.hpp  Entrypoint.cpp  Menu.cpp  Menu.hpp  Tab.cpp  Tab.hpp  TabManager.cpp  TabManager.hpp  TabView.cpp  WidgetItem.cpp  WidgetItem.hpp
Src/Graphic/Qt/Tabs/: Tab.cpp  Tab.hpp  TabManager.cpp  TabManager.hpp  TabView.hpp
Src/Graphic/Qt/Widgets/: AWidget.cpp  AWidget.hpp  GeneralWidget.cpp  GeneralWidget.hpp  HistoWidget.cpp  HistoWidget.hpp
Src/Modules/: IModule.hpp
Src/Modules/CPU/: CMakeLists.txt  Entrypoint.cpp  Module.cpp  Module.hpp
Src/Modules/Clock/: CMakeLists.txt  Module.cpp  Module.hpp
Src/Modules/Network/: CMakeLists.txt  Module.cpp  Module.hpp
Src/Modules/System/: CMakeLists.txt  Module.cpp
Src/Modules/User/: CMakeLists.txt  Module.cpp
